# gorilla-graphics

./: .gitignore  CMakeLists.txt  README.md  libgorilla-graphics.pc.in
src/: Common.hpp  color_rgba.cpp  color_rgba.hpp  command_list.hpp  command_list_d3d12.cpp  command_queue.hpp  command_queue_d3d12.cpp  device.hpp  device_d3d12.cpp  device_info.hpp  enums.hpp  enums_d3d12.hpp  errors.hpp  window.hpp  window_windows.cpp
src/resources/: command_allocator.cpp  command_allocator.hpp  descriptor_heap.cpp  descriptor_heap.hpp  fence.cpp  fence.hpp  resource.cpp  resource.hpp  swapchain.cpp  swapchain.hpp  texture_2d.cpp  texture_2d.hpp  texture_2d2.cpp  texture_2d2.hpp
tests/: unit-tests.cpp
